--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,2 +1,68 @@
 @import "mixins";
 @import "variables";
+
+.home-bg {
+    background-color: $purple;
+    width: 100%;
+    .header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 50px 0px;
+        .header-lista {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 55px;
+            .header-lista-flex {
+                display: flex;
+                align-items: center;
+                gap: 16px;
+                img {
+                    display: inline;
+                }
+                a {
+                    color: $white;
+                }
+            }
+        }
+    }
+    .section {
+        display: flex;
+        .section-box1 {
+            h1 {
+                margin-bottom: 16px;
+                max-width: 550px;
+            }
+            p {
+                color: $white;
+                font-weight: 400;
+                line-height: 150%;
+                margin-bottom: 32px;
+                max-width: 488px;
+            }
+            .section-a {
+                margin-bottom: 86px;
+                @include btn(16px, 50px, 16px, 50px, $yellow, $white, $gray1);
+            }
+            .section-flex {
+                a {
+                    max-width: 220px;
+                    padding: 20px 0px;
+                    display: flex;
+                    align-items: center;
+                    gap: 16px;
+                    color: $white;
+                    &:hover {
+                        color: $yellow;
+                    }
+                }
+            }
+        }
+        .section-box2 {
+            img {
+                margin-top: 70px;
+            }
+        }
+    }
+}
