--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -16,7 +16,6 @@
             color: $gray2;
         }
     }
-
     .menu-flex2 {
         display: flex;
         gap: 5rem;
@@ -31,6 +30,39 @@
                 font-size: 16px;
                 line-height: 165%;
                 color: $gray2;
+            }
+        }
+    }
+    // responsivo menu
+    // menu-flex
+    @include responsivo(800px) {
+        .menu-flex {
+            flex-direction: column;
+            margin-bottom: 5rem;
+            h2 {
+                text-align: center;
+            }
+            h4 {
+                margin-top: 2rem;
+            }
+        }
+        .menu-flex2 {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            .card {
+                max-width: 300px;
+                display: flex;
+                align-items: flex-start;
+                gap: 1.5rem;
+            }
+        }
+    }
+    // menu-flex2
+    @include responsivo(400px) {
+        .menu-flex {
+            h2 {
+                font-size: 2.8rem;
             }
         }
     }
